correcao de bug visual na pag

--- a/main.css
+++ b/main.css
@@ -8,6 +8,11 @@
 html {
     scroll-behavior: smooth;
 }
+
+html, body {
+    overflow-x: hidden;
+}
+
 .logo {
     display: flex;
     align-items: center;
